fix: decrease spacing between accordion items

--- a/src/components/accordion/AccordionItem.css
+++ b/src/components/accordion/AccordionItem.css
@@ -51,7 +51,6 @@ p {
   font-weight: 400;
   line-height: 1.5;
   color: var(--pale-purple);
-  margin: 20px 0;
 }
 
 @media only screen and (min-width: 640px) { 
@@ -69,6 +68,5 @@ p {
 
   p {
     font-size: 16px;
-    margin: 24px 0;
   }
 }
